# ai-research-agent

./: .dockerignore  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cli.py  example.py  example_mcp_config.py  example_mcp_node_config.py  example_multi_provider.py  example_node_config.py  main.py  project_status.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  test_logging.py  test_mcp_tool_integration.py  test_multi_provider.py  test_node_config.py  test_restart_logic.py
.github/: copilot-instructions.md
.github/instructions/: synthesize-node.md
.github/workflows/: validate-proposal.yml
agent/: __init__.py  cli.py  config.py  graph.py  llm_client.py  prompts.py  state.py
agent/nodes/: __init__.py  criticism.py  github_issue.py  persist.py  plan.py  prior_art.py  synthesize.py  (+2 more)
docs/: ARCHITECTURE_OVERVIEW.md  CONDITIONAL_RESTART.md  CONFIGURATION_GUIDE.md  CRITICISM_NODE.md  DOCUMENTATION_CHANGES.md  GITHUB_ISSUE_NODE.md  LOGGING_SYSTEM.md  MCP_CLIENT_CONFIG.md  MCP_INTEGRATION.md  MCP_INTEGRATION_GUIDE.md  MCP_TOOL_CONFIGURATION.md  MCP_TOOL_IMPLEMENTATION_SUMMARY.md  MULTI_PROVIDER_CONFIG.md  MULTI_PROVIDER_IMPLEMENTATION.md  NODE_ENABLE_DISABLE.md  PER_NODE_CONFIG.md  PROMPT_ORGANIZATION.md  README.md  REORGANIZATION_SUMMARY.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  WEB_RESEARCH_COMPREHENSIVE_UPDATE.md
examples/: README.md  component_synthesis_demo.py  components_cli_demo.py  mcp_configuration.py  multi_provider_setup.py  multiple_approaches_demo.py  node_config_demo.py  node_configuration.py  prompt_restructure_demo.py  web_research_demo.py
schema/: lean-research-schema.jsonc
scripts/: inspect_proposal_quality.py  validate_proposal.py
tests/: __init__.py  conftest.py
(+31 files in other folders)
